[gd_scene load_steps=5 format=2]

[ext_resource path="res://OptionsFileLine.gd" type="Script" id=1]
[ext_resource path="res://IconFile.png" type="Texture" id=2]
[ext_resource path="res://IconSearch.png" type="Texture" id=3]
[ext_resource path="res://IconReload.png" type="Texture" id=4]

[node name="OptionsFileLine" type="HBoxContainer"]
margin_right = 722.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 274.0
margin_bottom = 24.0
rect_clip_content = true
size_flags_horizontal = 11
size_flags_vertical = 1
text = "Dwarf Fortress Folder"
clip_text = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 278.0
margin_right = 689.0
margin_bottom = 24.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/minimum_spaces = 3

[node name="FileButton" type="Button" parent="."]
margin_left = 693.0
margin_right = 721.0
margin_bottom = 24.0
hint_tooltip = "Open file dialog"
icon = ExtResource( 2 )

[node name="SearchButton" type="Button" parent="."]
visible = false
margin_left = 694.0
margin_right = 722.0
margin_bottom = 24.0
hint_tooltip = "Automatically search in probable folders"
icon = ExtResource( 3 )

[node name="RestartButton" type="Button" parent="."]
visible = false
margin_left = 694.0
margin_right = 722.0
margin_bottom = 24.0
hint_tooltip = "Requires reload"
icon = ExtResource( 4 )

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="FileButton" to="." method="_on_FileButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
